# lambda

./: .gitignore  CompileTime.lhs  Data.lhs  Helper.lhs  Makefile  Parser.lhs  Plaintext.lhs  README  README.md  Simple.lhs  StateT_example.hs  TODO  Templates.lhs  lambda.cabal  stack.yaml  testCc  todo
BUGS/assigned/: 00000c-normal-undetected_name_collision_when_loading_files
BUGS/closed/: 000004-normal-Change_prompt_when_loading_failsX  000005-normal-Programm_terminiert_wenn_Datei_nicht_gefunden  000006-normal-C-c_resets_settings  000007-feature-Allow_spec_of_colors
BUGS/open/: 000001-critical-Newly_generated_variables_may_clash_with_existing_ones  000002-feature-Better_X-conversion  000003-feature-what_to_trace  000008-feature-Generic_code_generating_output  000009-feature-sharing  00000a-feature-more_info_about_steps  00000b-feature-X-Konversion_als_Schritt  00000c-critical-Terminates_on_load_of_nonexistent_file  00000c-normal-undetected_name_collision_when_loading_files
demo/: assignments.l  church-numbers.l  comment.l  emulate.l  exam.l  exercise.l  fix.l  lists.l  prelude.l  quickstart.l  test.l
help/: basic  commands  license  setup  syntax
src/: CompileTime.lhs  Data.lhs  Helper.lhs  Parser.lhs  Simple.lhs  Templates.lhs
