cabal-version: >= 1.10

-- see http://haskell.org/cabal/users-guide/

name:                lambda
version:             0.3
synopsis:            Primitive λ-evaluator
description:         This is a primitive, normal order, WHNF reducer for
                     expressions of a slightly extended λ-calculus.
license:             GPL-3
license-file:        LICENSE
author:              Stefan Klinger
maintainer:          lambda@stefan-klinger.de
copyright:           Stefan Klinger <http://stefan-klinger.de>
category:            Language
build-type:          Simple
extra-source-files:  help/basic
                     help/commands
                     help/license
                     help/setup
                     help/syntax
executable lambda
  main-is:             Simple.lhs
  ghc-options:         -Wall -fno-warn-name-shadowing
  other-modules:       CompileTime
                     , Data
                     , Helper
                     , Parser
                     , Templates
  -- other-extensions:    TemplateHaskell
  build-depends:       base
                     , containers
                     , haskeline
                     , template-haskell
                     , process
                     , directory
                     , parsec
                     , mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
